# TK7DATATOOL

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
data-tool/: CMakeLists.txt  generate_offsets.py
data-tool/include/: events.h  includes.h  offsets.h
data-tool/resources/: memory_address.ini  notes.md
data-tool/src/: drawing.cpp  events.cpp  main.cpp  render.cpp
include/: includes.h  offsets.h
injector/: CMakeLists.txt
injector/src/: main.c
src/: events.cpp  main.cpp  main.cpp.bak  render.cpp
